Fixed White Space

--- a/Survey Monkey/force-app/main/default/lwc/viewAllResponses/viewAllResponses.css
+++ b/Survey Monkey/force-app/main/default/lwc/viewAllResponses/viewAllResponses.css
@@ -22,3 +22,17 @@
     background-clip: padding-box;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.10);
 }
+
+.slds-scope .sm-container_responses {
+    max-height: 450px;
+}
+
+.slds-scope .sm-question-list__item {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+.sm-question-list .sm-question-list__item+.sm-question-list__item{
+    border-top: 1px solid rgb(221, 219, 218);
+}
